--- a/AAAReclamsO/Base.lproj/Main.storyboard
+++ b/AAAReclamsO/Base.lproj/Main.storyboard
@@ -230,13 +230,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1IV-49-Hvk" userLabel="markets ScrollView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="catalogs_scroll.png" translatesAutoresizingMaskIntoConstraints="NO" id="2p5-AF-gdC" userLabel="catalogs ImgView">
+                                <rect key="frame" x="0.0" y="20" width="320" height="422"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="markets_scroll.png" translatesAutoresizingMaskIntoConstraints="NO" id="cPv-b4-pmI" userLabel="markets ImgView">
+                                <rect key="frame" x="0.0" y="438" width="320" height="82"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="circular.png" translatesAutoresizingMaskIntoConstraints="NO" id="kb2-5f-pIm">
+                                <rect key="frame" x="0.0" y="450" width="320" height="50"/>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1IV-49-Hvk" userLabel="markets ScrollView">
                                 <rect key="frame" x="0.0" y="440" width="320" height="80"/>
-                                <color key="backgroundColor" red="0.99607849120000003" green="0.99607849120000003" blue="0.33725491169999999" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </scrollView>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N81-ok-fha" userLabel="catalogs ScrollView">
                                 <rect key="frame" x="0.0" y="20" width="320" height="422"/>
-                                <color key="backgroundColor" red="0.67752438780000002" green="0.13277532319999999" blue="0.058108061959999999" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -245,6 +254,7 @@
                     <connections>
                         <outlet property="catalogsScrollView" destination="N81-ok-fha" id="naF-IJ-abT"/>
                         <outlet property="marketsScrollView" destination="1IV-49-Hvk" id="9HP-L5-lbO"/>
+                        <outlet property="testImag" destination="kb2-5f-pIm" id="5pU-FS-wdZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dzr-UZ-Jrx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -451,13 +461,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </imageView>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nKE-wH-PAu" userLabel="spinner view">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                                <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="2Jq-nF-Tda">
+                                        <rect key="frame" x="150" y="250" width="20" height="20"/>
+                                    </activityIndicatorView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.9450981021" green="0.2117647231" blue="0.31764706970000001" alpha="1" colorSpace="deviceRGB"/>
+                        <color key="backgroundColor" red="0.84705889225006104" green="0.12549020349979401" blue="0.17254902422428131" alpha="1" colorSpace="deviceRGB"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="320" height="519"/>
                     <connections>
                         <outlet property="page" destination="Ba8-Pk-bQC" id="c4B-xG-vTI"/>
+                        <outlet property="spinnerView" destination="nKE-wH-PAu" id="8b2-rX-kz4"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mRU-lX-aWJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -466,7 +486,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="catalogs_scroll.png" width="640" height="845"/>
+        <image name="circular.png" width="612" height="116"/>
         <image name="first" width="30" height="30"/>
+        <image name="markets_scroll.png" width="640" height="174"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
